fix: fix contributors css overflow not wrap (#20838)

--- a/site/theme/static/contributors.less
+++ b/site/theme/static/contributors.less
@@ -1,8 +1,11 @@
 .contributors-list {
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 120px !important;
 
-  a + a,
+  a,
   .ant-avatar + .ant-avatar {
-    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
   }
 }
